syntax = "proto3";
package protobuf;

enum MessageType {
    PEER_UPDATE = 0;
    MESSAGE = 1;
}

message MeshIMMessage {
    MessageType messageType = 1;
    PeerUpdate peerUpdate = 2;
    Message message = 3;
}

message PeerUpdate{
    string userName =1;
    int32 avatarId =2;
}
message Message{
    string message =1;
    int64 time=2;
}